crates/tui/tests/storybook/snapshots/app_message__full_agent_turn_composite.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 70 22
  0   0  61 bg=AnsiValue(236)
  0  61   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  29 bg=AnsiValue(236) attrs=bold
  1  30  39 bg=AnsiValue(236)
  2   0  69 bg=AnsiValue(236)
  4   0  68 attrs=dim|italic
  8   0   1 fg=AnsiValue(77)
  8   1  10 attrs=dim
  8  59  10 attrs=dim
  9   0   2 bg=Rgb { r: 60, g: 20, b: 20 }
  9   2   3 fg=AnsiValue(244) bg=Rgb { r: 60, g: 20, b: 20 }
  9   5   2 fg=Red bg=Rgb { r: 60, g: 20, b: 20 }
  9   7   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  9   9   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  10   3 fg=Rgb { r: 166, g: 226, b: 46 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  13   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  14   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  15   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  17   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  18   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 110, g: 35, b: 35 }
  9  20   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  22   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  23   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  25   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  26   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 110, g: 35, b: 35 }
  9  28   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 60, g: 20, b: 20 }
  9  29  40 bg=Rgb { r: 60, g: 20, b: 20 }
 10   0   2 bg=Rgb { r: 20, g: 50, b: 20 }
 10   2   3 fg=AnsiValue(244) bg=Rgb { r: 20, g: 50, b: 20 }
 10   5   2 fg=Green bg=Rgb { r: 20, g: 50, b: 20 }
 10   7   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
 10   9   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  10   8 fg=Rgb { r: 166, g: 226, b: 46 } bg=Rgb { r: 35, g: 95, b: 35 }
 10  18   3 fg=Rgb { r: 166, g: 226, b: 46 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  21   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  22   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  23   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  25   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  26   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
 10  28   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  30   1 fg=Rgb { r: 253, g: 151, b: 31 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  31   2 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  33   1 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  34   2 fg=Rgb { r: 102, g: 217, b: 239 } bg=Rgb { r: 35, g: 95, b: 35 }
 10  36   1 fg=Rgb { r: 248, g: 248, b: 242 } bg=Rgb { r: 20, g: 50, b: 20 }
 10  37  32 bg=Rgb { r: 20, g: 50, b: 20 }
 18   0   1 fg=AnsiValue(237)
 18   1   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18   2   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   3   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   4   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   5   1 fg=Rgb { r: 140, g: 140, b: 140 } attrs=bold
 18   6   1 fg=Rgb { r: 144, g: 144, b: 144 } attrs=bold
 18   7   1 fg=Rgb { r: 157, g: 157, b: 157 } attrs=bold
 18   8   1 fg=Rgb { r: 175, g: 175, b: 175 } attrs=bold
 18   9   1 fg=Rgb { r: 198, g: 198, b: 198 } attrs=bold
 18  10   1 fg=Rgb { r: 220, g: 220, b: 220 } attrs=bold
 18  11   1 fg=Rgb { r: 238, g: 238, b: 238 } attrs=bold
 18  13  57 fg=AnsiValue(237)
 19   1   1 fg=Black bg=White
 20   0  70 fg=AnsiValue(237)
 21   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 21  10  52 bg=AnsiValue(233)
 21  62   8 fg=AnsiValue(244) bg=AnsiValue(233)
