crates/tui/tests/storybook/snapshots/app_message__transcript_timestamp_toggle_includes_tools_and_groups.hidden.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

 Inspect the files, then run the tests.


* explore ×2
  read_file src/a.rs
  read_file src/b.rs

* bash cargo test  2.4s
  passed




─ ✿ working… 2s ────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
