crates/tui/tests/storybook/snapshots/app_message__transcript_timestamp_toggle_includes_tools_and_groups.visible.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---
                                                               14:37:03
 Inspect the files, then run the tests.


* explore ×2                                                   14:37:03
  read_file src/a.rs
  read_file src/b.rs

* bash cargo test  2.4s                                        14:37:03
  passed




─ ✿ working… 2s ────────────────────────────────────────────────────────

────────────────────────────────────────────────────────────────────────
 ○ normal                                                       1:1 100%
