crates/tui/tests/storybook/snapshots/app_message__turn_error_block.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 60 10
  5   2   5 fg=AnsiValue(9) attrs=bold
  5   9  42 attrs=dim
  6   0   1 fg=AnsiValue(237)
  6   1  12 fg=AnsiValue(244) attrs=dim
  6  13   2 fg=AnsiValue(237)
  6  15   7 fg=AnsiValue(244) attrs=dim
  6  23  37 fg=AnsiValue(237)
  7   1   1 fg=Black bg=White
  8   0  60 fg=AnsiValue(237)
  9   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  9  10  42 bg=AnsiValue(233)
  9  52   8 fg=AnsiValue(244) bg=AnsiValue(233)
