crates/tui/tests/storybook/snapshots/app_message__user_message_block_multiline_chrome.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 50 11
  0   0  40 bg=AnsiValue(236)
  0  40   8 fg=Rgb { r: 128, g: 128, b: 128 } bg=AnsiValue(236)
  0  48   1 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  20 bg=AnsiValue(236) attrs=bold
  1  21  28 bg=AnsiValue(236)
  2   0   1 bg=AnsiValue(236)
  2   1  13 bg=AnsiValue(236) attrs=bold
  2  14  35 bg=AnsiValue(236)
  3   0   1 bg=AnsiValue(236)
  3   1  14 bg=AnsiValue(236) attrs=bold
  3  15  34 bg=AnsiValue(236)
  4   0   1 bg=AnsiValue(236)
  4   1  12 bg=AnsiValue(236) attrs=bold
  4  13  36 bg=AnsiValue(236)
  5   0  49 bg=AnsiValue(236)
  6   0   6 fg=AnsiValue(208) attrs=bold
  6   6  19 fg=AnsiValue(244)
  6  25   2 fg=AnsiValue(244) attrs=dim
  6  27  21 fg=AnsiValue(244)
  7   0  50 fg=AnsiValue(237)
  8   1   1 fg=Black bg=White
  9   0  50 fg=AnsiValue(237)
 10   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
 10  10  32 bg=AnsiValue(233)
 10  42   8 fg=AnsiValue(244) bg=AnsiValue(233)
